# paidup-intelligence

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml
docs/: cost-analysis.md  engineering-maturity.md  how-to-run.md  schema-fixes.sql  schema.sql  security-roles.sql
docs/decisions/: 001-vector-store.md  002-embedding-model.md  003-ivfflat-index.md  004-smart-reembed.md  005-appg-data-source.md  006-db-connection-strategy.md  007-ec-api-page-size.md  008-ingestion-resilience.md  009-test-suite.md  010-vector-similarity-and-retrieval.md  011-disk-space-management.md  012-analysis-as-skill.md  013-database-security.md  014-containerization.md  015-agent-tools-direct-not-wire-mcp.md  016-caching-and-cost-control.md
scripts/: seed_local.py
skills/conflict_of_interest_report/: SKILL.md
skills/conflict_of_interest_report/scripts/: align_timeline.py
src/app/: agent.py  agent_tools.py  cache.py  config.py  database.py  embeddings.py  ingest_all.py  ingest_appgs.py  ingest_common.py  ingest_donations.py  ingest_interests.py  ingest_votes.py  main.py  mcp_server.py  run_log.py
src/app/templates/: index.html
tests/: test_agent.py  test_agent_tools.py  test_align_timeline.py  test_cache.py  test_config.py  test_database.py  test_embeddings.py  test_ingest_common.py  test_ingest_donations.py  test_ingest_interests.py  test_ingest_votes.py  test_main.py  test_run_log.py
