[project]
name = "paidup-intelligence"
version = "0.1.0"
description = "AI-powered parliamentary intelligence — semantic search across UK Parliament data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.31",
    "psycopg2-binary>=2.9",
    "openai>=1.0",
    "pgvector>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
